MSE: Fix logic bugs with high precision duration

Upon end of stream, chunk demuxer should decrease the duration to
match the highest buffered end time. This was not happening for
user-set durations which exceeded the highest buffered end time by
less than a microsecond.

Additionally, some style refactoring. For MSE, we pull duration
directly from the demuxer, which stores the user set value with full
precision. Moving this logic to WMPI from HTMLMediaElement ensures
duration WMPI uses matches that of HTMLMediaElement.

TEST=New layout test and manual testing of bug report steps
BUG=669997

Review-Url: https://codereview.chromium.org/2581533002
Cr-Commit-Position: refs/heads/master@{#442699}

Former-commit-id: b92d50681a244d9cf988ea32fcdb6ea7cd096be2